fix: build java version, change methods from java 21